--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <canvas id="canvas"></canvas>
     <div id="controls"></div>
-    <div id="graph"></div>
+    <canvas id="graph"></div>
     <script src="./built/index.js"></script>
   </body>
 </html>
