--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <canvas id="canvas"></canvas>
-    <div id="controls"></div>
+    <div id="controls">
+      <button id="lockdown">Lockdown</button>
+    </div>
     <canvas id="graph"></div>
     <script src="./built/index.js"></script>
   </body>
