--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       
       <button id="lockdown">Lockdown</button>
       <button id="reset">Reset</button>
+      <label for="maskCoverage">Mask Coverage</label>
+      <input class="slider" id="maskCoverage" type="range" min="0" max="100" value="50">
     </div>
     <canvas id="graph"></div>
     <script src="./built/index.js"></script>
