Mask effectiveness slider

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       <button id="reset">Reset</button>
       <label for="maskCoverage">Mask Coverage</label>
       <input class="slider" id="maskCoverage" type="range" min="0" max="100" value="50">
+      <label for="maskEffictiveness">Mask Effectiveness</label>
+      <input class="slider" id="maskEffictiveness" type="range" min="0" max="100" value="50">
     </div>
     <canvas id="graph"></div>
     <script src="./built/index.js"></script>
