Eat out to help out

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       
       <button id="lockdown">Lockdown</button>
       <button id="reset">Reset</button>
+      <button id="zones">Eat Out To Help Out</button>
       <label for="maskCoverage">Mask Coverage</label>
       <input class="slider" id="maskCoverage" type="range" min="0" max="100" value="50">
       <label for="maskEffictiveness">Mask Effectiveness</label>
